Header initial commit

--- a/index.html
+++ b/index.html
@@ -225,7 +225,11 @@
         </div>
     </aside>
 
-
+    <header>
+        <div class="container header-container">
+            
+        </div>
+    </header>
 
     <!-- Local JS -->
     <script src="./assets/js/scripts.js"></script>
