Services section completed

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="container user-info-lang-container">
                 <div class="row display-flex h-100 align-center">
                     <div class="col-4">
-                        <div id="progressCircle1" class="progress blue">
+                        <div id="progressCircle1" class="progress first">
                             <span class="progress-left">
                                 <span class="progress-bar"></span>
                             </span>
@@ -97,7 +97,7 @@
                         <div class="language">Spanish</div>
                     </div>
                     <div class="col-4">
-                        <div id="progressCircle2" class="progress yellow">
+                        <div id="progressCircle2" class="progress second">
                             <span class="progress-left">
                                 <span class="progress-bar"></span>
                             </span>
@@ -109,7 +109,7 @@
                         <div class="language">English</div>
                     </div>
                     <div class="col-4">
-                        <div id="progressCircle3" class="progress pink">
+                        <div id="progressCircle3" class="progress third">
                             <span class="progress-left">
                                 <span class="progress-bar"></span>
                             </span>
@@ -273,7 +273,7 @@
     </section>
 
     <section id="servicesSection">
-        <div class="services-section">
+        <div class="container services-section">
             <h5>My Services</h5>
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-4">
@@ -324,14 +324,15 @@
         </div>
     </section>
 
-    <section>
+    <section id="portfolioSection">
         <div class="portfolio-section">
             <h5>Portfolio</h5>
-            <div class="row">
-                <div class="col-12 col-md-6 col-lg-4"></div>
-                <div class="col-12 col-md-6 col-lg-4"></div>
-                <div class="col-12 col-md-6 col-lg-4"></div>
-            </div>
+        </div>
+    </section>
+
+    <section id="contactSection">
+        <div class="contact-section">
+            <h5>Contact</h5>
         </div>
     </section>
 
@@ -342,6 +343,6 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    
+
   </body>
 </html>
