--- a/index.html
+++ b/index.html
@@ -327,6 +327,19 @@
     <section id="portfolioSection">
         <div class="portfolio-section">
             <h5>Portfolio</h5>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <img src="" alt="">
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <img src="" alt="">
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <img src="" alt="">
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
