portfolio menu added

--- a/index.html
+++ b/index.html
@@ -327,8 +327,22 @@
     <section id="portfolioSection">
         <div class="portfolio-section">
             <h5>Portfolio</h5>
+            <ul class=" portfolio-menu mx-auto">
+                <li id="pOption1" class="p-active">
+                    All
+                </li>
+                <li id="pOption2">
+                    Web Design
+                </li>
+                <li id="pOption3">
+                    Advertising
+                </li>
+            </ul>
             <div class="container">
                 <div class="row">
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <img src="" alt="">
+                    </div>
                     <div class="col-12 col-md-6 col-lg-4">
                         <img src="" alt="">
                     </div>
