large screens responsive design added

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="./assets/css/helpers.css">
     <link rel="stylesheet" href="./assets/css/circularProgressBar.css">
     <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
 
     <link rel="shortcut icon" href="#">
 
@@ -33,7 +34,7 @@
 
     <nav>
         <div class="nav-bar">
-            <div class="container nav-bar-container display-flex justify-space-between">
+            <div class="container nav-bar-container display-flex justify-space-between justify-lg-end">
                 <span id="userInfoNavBarBtn" class="nav-bar-icon">
                     <i class="fas fa-ellipsis-v"></i>
                 </span>
@@ -229,7 +230,7 @@
         </div>
     </aside>
 
-    <header>
+    <header id="header">
         <div class="container header-container">
             <div class="header-banner">
                 <div class="header-banner-title">
@@ -241,7 +242,7 @@
                     <p>&lt;<span>code</span>&gt; I build Web Interfaces &lt;<span>code</span>&gt;</p>
                 </div>
                 <div class="header-banner-btn">
-                    <a href="#">
+                    <a href="#servicesSection">
                         EXPLORE NOW
                     </a>
                 </div>
@@ -249,7 +250,7 @@
         </div>
     </header>
 
-    <section>
+    <section id="expertiseSection">
         <div class="container expertise-section">
             <div class="row">
                 <div class="col-6 col-md-6 col-lg-3">
