--- a/index.html
+++ b/index.html
@@ -358,6 +358,22 @@
     <section id="contactSection">
         <div class="contact-section">
             <h5>Contact</h5>
+            <div class="container">
+                <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/xnqlgkwl" method="post">
+                    <fieldset id="fs-frm-inputs">
+                        <label for="full-name">Full Name</label>
+                        <input type="text" name="name" id="full-name" placeholder="First and Last" required="">
+                        <label for="email-address">Email Address</label>
+                        <input type="email" name="_replyto" id="email-address" placeholder="email@domain.com" required="">
+                        <label for="message">Message</label>
+                        <textarea rows="5" name="message" id="message" placeholder="Type your message here..." required=""></textarea>
+                        <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
+                    </fieldset>
+                    <div class="w-100 text-center">
+                        <input type="submit" class="submit" value="Submit">
+                    </div>
+                </form>
+            </div>
         </div>
     </section>
 
