--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="user-info-lang">
             <div class="container user-info-lang-container">
                 <div class="row display-flex h-100 align-center">
-                    <div class="col-4">
+                    <div class="col-6">
                         <div id="progressCircle1" class="progress first">
                             <span class="progress-left">
                                 <span class="progress-bar"></span>
@@ -97,7 +97,7 @@
                         </div>
                         <div class="language">Spanish</div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-6">
                         <div id="progressCircle2" class="progress second">
                             <span class="progress-left">
                                 <span class="progress-bar"></span>
@@ -108,18 +108,6 @@
                             <div class="progress-value">90%</div>
                         </div>
                         <div class="language">English</div>
-                    </div>
-                    <div class="col-4">
-                        <div id="progressCircle3" class="progress third">
-                            <span class="progress-left">
-                                <span class="progress-bar"></span>
-                            </span>
-                            <span class="progress-right">
-                                <span class="progress-bar"></span>
-                            </span>
-                            <div class="progress-value">20%</div>
-                        </div>
-                        <div class="language">German</div>
                     </div>
                 </div>
             </div>
@@ -301,7 +289,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="service">
-                        <h6>Cloud Computing</h6>
+                        <h6>Cloud Computing Projects</h6>
                         <p>Lorem ipsum dolor sit amet consectetur 
                             adipisicing elit. Dolores odit fugit 
                             quo ipsum libero dolore corrupti beatae 
