--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <div class="container side-menu-submenu-wrapper">
             <div class="side-menu-submenu-container">
                 <ul>
-                    <li class="menu-option"><a href="#" onclick="closeSideMenu();">Home</a></li>
+                    <li class="menu-option"><a href="index.html" onclick="closeSideMenu();">Home</a></li>
                     <li class="menu-option"><a href="#servicesSection" onclick="closeSideMenu();">Services</a></li>
                     <li class="menu-option"><a href="#portfolioSection" onclick="closeSideMenu();">Portfolio</a></li>
                     <li class="menu-option"><a href="#contactSection" onclick="closeSideMenu();">Contact</a></li>
@@ -261,6 +261,8 @@
         </div>
     </section>
 
+    <hr>
+    
     <section id="servicesSection">
         <div class="container services-section">
             <h5>My Services</h5>
