typewriter effect added

--- a/index.html
+++ b/index.html
@@ -227,7 +227,9 @@
                     </h1>
                 </div>
                 <div class="header-banner-code">
-                    <p>&lt;<span>code</span>&gt; I build Web Interfaces &lt;<span>code</span>&gt;</p>
+                    <div class="typewriter-wrapper">
+                        <p>&lt;<i>code</i>&gt;I build <span class="typed-text"></span><span class="cursor">&nbsp;</span>&lt;<i>code</i>&gt;</p>
+                    </div>
                 </div>
                 <div class="header-banner-btn">
                     <a href="#servicesSection">
