--- a/index.html
+++ b/index.html
@@ -331,16 +331,16 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6 col-lg-4">
-                        <img src="" alt="">
+                        <img src="./assets/imgs/webDesign.jpg" alt="Web Design image">
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <img src="" alt="">
+                        <img src="./assets/imgs/webDesign.jpg" alt="Web Design image">
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <img src="" alt="">
+                        <img src="./assets/imgs/webDesign.jpg" alt="Web Design image">
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <img src="" alt="">
+                        <img src="./assets/imgs/webDesign.jpg" alt="Web Design image">
                     </div>
                 </div>
             </div>
