knowledge section modified

--- a/index.html
+++ b/index.html
@@ -160,9 +160,8 @@
             <div class="container user-info-knowledge-container">
                 <ul>
                     <li><i class="fas fa-check"></i>  Bootstrap</li>
-                    <li><i class="fas fa-check"></i>  Sass</li>
-                    <li><i class="fas fa-check"></i>  Gulp</li>
                     <li><i class="fas fa-check"></i>  Git knowledge</li>
+                    <li><i class="fas fa-check"></i>  Microsoft Azure</li>
                 </ul>
             </div>
         </div>
