last spanish/english feature fix

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <h5 class="english">Residence:</h5>
                         <h6 class="english">Mexico</h6>
                         <h5 class="spanish display-none">Residencia:</h5>
-                        <h6 class="spanish display-none">Mexico</h6>
+                        <h6 class="spanish display-none">México</h6>
                     </li>
                     <li class="display-flex justify-space-between">
                         <h5 class="english">City:</h5>
