language issues fixed

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <li class="display-flex justify-space-between">
                         <h5 class="english">Age:</h5>
                         <h6 class="english">27</h6>
-                        <h5 class="spanish display-none">Age:</h5>
+                        <h5 class="spanish display-none">Edad:</h5>
                         <h6 class="spanish display-none">27</h6>
                     </li>
                 </ul>
@@ -179,7 +179,10 @@
         <hr>
         <div class="resume">
             <div class="container resume-container">
-                <a href="./assets/files/Resume MAIG.pdf" download>
+                <a href="./assets/files/Resume MAIG.pdf" download class="english">
+                    Download CV <i class="fas fa-download"></i>
+                </a>
+                <a href="./assets/files/Resume MAIG.pdf" download class="spanish display-none">
                     Download CV <i class="fas fa-download"></i>
                 </a>
             </div>
@@ -391,7 +394,7 @@
     <section id="contactSection">
         <div class="contact-section">
             <h5 class="english">Contact</h5>
-            <h5 class="spanish display-none">Contact</h5>
+            <h5 class="spanish display-none">Contacto</h5>
             <div class="container">
                 <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/xnqlgkwl" method="post">
                     <fieldset id="fs-frm-inputs">
