language issues fixed

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     Download CV <i class="fas fa-download"></i>
                 </a>
                 <a href="./assets/files/Resume MAIG.pdf" download class="spanish display-none">
-                    Download CV <i class="fas fa-download"></i>
+                    Descargar CV <i class="fas fa-download"></i>
                 </a>
             </div>
         </div>
