--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
                 <a href="https://github.com/mikeislas06" target="_blank">
                     <i class="fab fa-github"></i>
                 </a>
-                <a href="">
-                    <i class="fas fa-envelope"></i>
+                <a href="https://codepen.io/maig0818" target="_blank">
+                    <i class="fab fa-codepen"></i>
                 </a>
             </div>
         </div>
