changes on responsive design

--- a/index.html
+++ b/index.html
@@ -225,10 +225,10 @@
         <hr>
         <div class="side-menu-footer">
             <div class="container side-menu-footer-lang">
-                <div class="lang lang-english">
+                <div id="englishBtnWrapper" class="lang lang-english en-fixed">
                     <h6 id="englishBtn">En</h6>
                 </div>
-                <div class="lang lang-spanish">
+                <div id="spanishBtnWrapper" class="lang lang-spanish es-fixed">
                     <h6 id="spanishBtn">Es</h6>
                 </div>
             </div>
@@ -240,7 +240,7 @@
             <div class="header-banner">
                 <div class="header-banner-title">
                     <h1 class="english">
-                        Web Developing is my passion!
+                        Web Development is my passion!
                     </h1>
                     <h1 class="spanish display-none">
                         ¡El Desarrollo Web es mi Pasión!
@@ -327,7 +327,7 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="service">
                         <h6 class="english">Cloud Computing Projects</h6>
-                        <h6 class="spanish display-none">Proyectos en la Nube</h6>
+                        <h6 class="spanish display-none">Proyectos de Cloud Computing</h6>
                         <p>Lorem ipsum dolor sit amet consectetur 
                             adipisicing elit. Dolores odit fugit 
                             quo ipsum libero dolore corrupti beatae 
