page title changed

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <link rel="shortcut icon" href="#">
 
-    <title>Miguel A. Islas G.</title>
+    <title>Miguel A. Islas Guerrero</title>
   </head>
   <body>
 
