portfolio images added

--- a/index.html
+++ b/index.html
@@ -77,15 +77,12 @@
                     <div class="user-info-header-banner-user">
                         <div class="user-info-header-banner-user-img"></div>
                         <div class="user-info-header-banner-user-name">
-                            <h6 class="english">Miguel A. Islas G.</h6>
-                            <h6 class="spanish display-none">
-                                Miguel A. Islas G.
-                            </h6>
+                            <h6>Miguel A. Islas G.</h6>
                         </div>
                         <div class="user-info-header-banner-user-job">
-                            <h6 class="english">Front-end Developer</h6>
+                            <h6 class="english">Full-stack Developer</h6>
                             <h6 class="spanish display-none">
-                                Desarrollador Front-End
+                                Desarrollador Full-stack
                             </h6>
                         </div>
                     </div>
@@ -464,7 +461,7 @@
                                 Proyectos de Cloud Computing
                             </h6>
                             <p class="english">
-                                First level Solution creation in infrastructure
+                                First level Solution creation of infrastructure
                                 in Microsof Azure mainly. Provide appropriate
                                 and customized value propositions. Developing
                                 tools to automate manual procedures and increase
@@ -522,12 +519,12 @@
                 <h5 class="english">Portfolio</h5>
                 <h5 class="spanish display-none">Portafolio</h5>
                 <ul class="portfolio-menu mx-auto">
-                    <li id="pOption1" class="english p-active">All</li>
+                    <!-- <li id="pOption1" class="english p-active">All</li>
                     <li id="pOption1" class="spanish display-none p-active">
                         Todos
-                    </li>
-                    <li id="pOption2" class="english">Web Design</li>
-                    <li id="pOption2" class="spanish display-none">
+                    </li> -->
+                    <li id="pOption2" class="english p-active">Web Design</li>
+                    <li id="pOption2" class="spanish display-none p-active">
                         Diseño Web
                     </li>
                 </ul>
@@ -538,7 +535,7 @@
                         >
                             <img
                                 src="./assets/imgs/VMT_Portfolio.png"
-                                alt="Web Design image"
+                                alt="Freelance Resume project"
                             />
                             <a
                                 class="show-more-btn"
@@ -552,27 +549,12 @@
                             class="col-12 col-md-6 col-lg-4 portfolio-container"
                         >
                             <img
-                                src="./assets/imgs/webDesign.jpg"
-                                alt="Web Design image"
+                                src="./assets/imgs/pokeapi.png"
+                                alt="Pokemon API project in JS"
                             />
                             <a
                                 class="show-more-btn"
-                                href="https://vmt-ux.netlify.app"
-                                target="_blank"
-                            >
-                                <span>Go to site</span>
-                            </a>
-                        </div>
-                        <div
-                            class="col-12 col-md-6 col-lg-4 portfolio-container"
-                        >
-                            <img
-                                src="./assets/imgs/webDesign.jpg"
-                                alt="Web Design image"
-                            />
-                            <a
-                                class="show-more-btn"
-                                href="https://vmt-ux.netlify.app"
+                                href="https://pokeapi-maig.netlify.app"
                                 target="_blank"
                             >
                                 <span>Go to site</span>
