React world wiki added to portfolio section

--- a/index.html
+++ b/index.html
@@ -549,12 +549,12 @@
                             class="col-12 col-md-6 col-lg-4 portfolio-container"
                         >
                             <img
-                                src="./assets/imgs/pokeapi.png"
-                                alt="Pokemon API project in JS"
+                                src="./assets/imgs/reactWorldWiki.png"
+                                alt="World wiki React project"
                             />
                             <a
                                 class="show-more-btn"
-                                href="https://pokeapi-maig.netlify.app"
+                                href="https:/world-wiki-maig.netlify.app"
                                 target="_blank"
                             >
                                 <span>Go to site</span>
