tlahuiz-ux site modified

--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
                             />
                             <a
                                 class="show-more-btn"
-                                href="https://vmt-ux.netlify.app"
+                                href="https://tlahuiz-ux.netlify.app"
                                 target="_blank"
                             >
                                 <span>Go to site</span>
