world wiki app added to portfolio section

--- a/index.html
+++ b/index.html
@@ -545,6 +545,21 @@
                                 <span>Go to site</span>
                             </a>
                         </div>
+                        <div
+                            class="col-12 col-md-6 col-lg-4 portfolio-container"
+                        >
+                            <img
+                                src="./assets/imgs/worldWikiApp.png"
+                                alt="Countries React App"
+                            />
+                            <a
+                                class="show-more-btn"
+                                href="https:/world-wiki.netlify.app"
+                                target="_blank"
+                            >
+                                <span>Go to site</span>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
