portfolio img height fixed, todoApp added to portfolio

--- a/index.html
+++ b/index.html
@@ -519,13 +519,11 @@
                 <h5 class="english">Portfolio</h5>
                 <h5 class="spanish display-none">Portafolio</h5>
                 <ul class="portfolio-menu mx-auto">
-                    <!-- <li id="pOption1" class="english p-active">All</li>
-                    <li id="pOption1" class="spanish display-none p-active">
-                        Todos
-                    </li> -->
-                    <li id="pOption2" class="english p-active">Web Design</li>
+                    <li id="pOption2" class="english p-active">
+                        Web Development
+                    </li>
                     <li id="pOption2" class="spanish display-none p-active">
-                        Diseño Web
+                        Desarrollo Web
                     </li>
                 </ul>
                 <div class="container">
@@ -555,6 +553,21 @@
                             <a
                                 class="show-more-btn"
                                 href="https:/world-wiki.netlify.app"
+                                target="_blank"
+                            >
+                                <span>Go to site</span>
+                            </a>
+                        </div>
+                        <div
+                            class="col-12 col-md-6 col-lg-4 portfolio-container"
+                        >
+                            <img
+                                src="./assets/imgs/todoAppReact.png"
+                                alt="ToDo List React App"
+                            />
+                            <a
+                                class="show-more-btn"
+                                href="https:/todoapp-maig.netlify.app"
                                 target="_blank"
                             >
                                 <span>Go to site</span>
