href portfolio imgs fixed

--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
                             />
                             <a
                                 class="show-more-btn"
-                                href="https:/world-wiki.netlify.app"
+                                href="https://world-wiki.netlify.app"
                                 target="_blank"
                             >
                                 <span>Go to site</span>
@@ -567,7 +567,7 @@
                             />
                             <a
                                 class="show-more-btn"
-                                href="https:/todoapp-maig.netlify.app"
+                                href="https://todoapp-maig.netlify.app"
                                 target="_blank"
                             >
                                 <span>Go to site</span>
