knowledge area React info added

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                                     justify-space-between
                                 "
                             >
-                                Bootstrap <span>70 %</span>
+                                React <span>70 %</span>
                             </div>
                             <div class="skill-progress-bar">
                                 <div id="skill4" class="skill-progress"></div>
