TechPro site added to portfolio

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12 col-md-6 col-lg-4 portfolio-container">
-              <!-- 1300 clientWidth SS -->
+              <!-- 1300 GC SS -->
               <img
                 src="./assets/imgs/VMT_Portfolio.png"
                 alt="Freelance Resume project"
@@ -489,6 +489,19 @@
               <a
                 class="show-more-btn"
                 href="https://tienda-muebles-maig.netlify.app"
+                target="_blank"
+              >
+                <span>Go to site</span>
+              </a>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 portfolio-container">
+              <img
+                src="./assets/imgs/techPro.png"
+                alt="TechPro landing page site"
+              />
+              <a
+                class="show-more-btn"
+                href="https://techpro-maig.netlify.app/"
                 target="_blank"
               >
                 <span>Go to site</span>
