portfolio image added

--- a/index.html
+++ b/index.html
@@ -507,6 +507,16 @@
                 <span>Go to site</span>
               </a>
             </div>
+            <div class="col-12 col-md-6 col-lg-4 portfolio-container">
+              <img src="./assets/imgs/cafeteria.png" alt="La cafeteria site" />
+              <a
+                class="show-more-btn"
+                href="https://lacafeteria-maig.netlify.app/"
+                target="_blank"
+              >
+                <span>Go to site</span>
+              </a>
+            </div>
           </div>
         </div>
       </div>
