resume files modified and updated

--- a/index.html
+++ b/index.html
@@ -198,11 +198,11 @@
       <hr />
       <div class="resume">
         <div class="container resume-container">
-          <a href="./assets/files/ResumeMAIG.pdf" download class="english">
+          <a href="./assets/files/Miguel_Islas_Resume.pdf" download class="english">
             Download Resume <i class="fas fa-download"></i>
           </a>
           <a
-            href="./assets/files/CVMAIG.pdf"
+            href="./assets/files/Miguel_Islas_CV.pdf"
             download
             class="spanish display-none"
           >
