title modified 'Frontend Developer'

--- a/index.html
+++ b/index.html
@@ -51,12 +51,7 @@
     <nav>
       <div class="nav-bar">
         <div
-          class="
-            container
-            nav-bar-container
-            display-flex
-            justify-space-between justify-lg-end
-          "
+          class="container nav-bar-container display-flex justify-space-between justify-lg-end"
         >
           <span id="userInfoNavBarBtn" class="nav-bar-icon">
             <i class="fas fa-info-circle"></i>
@@ -80,8 +75,8 @@
               <h6>Miguel A. Islas G.</h6>
             </div>
             <div class="user-info-header-banner-user-job">
-              <h6 class="english">Full-stack Developer</h6>
-              <h6 class="spanish display-none">Desarrollador Full-stack</h6>
+              <h6 class="english">Frontend Developer</h6>
+              <h6 class="spanish display-none">Desarrollador Frontend</h6>
             </div>
           </div>
         </div>
@@ -198,7 +193,11 @@
       <hr />
       <div class="resume">
         <div class="container resume-container">
-          <a href="./assets/files/Miguel_Islas_Resume.pdf" download class="english">
+          <a
+            href="./assets/files/Miguel_Islas_Resume.pdf"
+            download
+            class="english"
+          >
             Download Resume <i class="fas fa-download"></i>
           </a>
           <a
@@ -212,12 +211,7 @@
       </div>
       <div class="user-info-footer">
         <div
-          class="
-            container
-            user-info-footer-container
-            display-flex
-            justify-space-between
-          "
+          class="container user-info-footer-container display-flex justify-space-between"
         >
           <a href="https://www.linkedin.com/in/maig" target="_blank">
             <i class="fab fa-linkedin-in"></i>
@@ -518,7 +512,10 @@
               </a>
             </div>
             <div class="col-12 col-md-6 col-lg-4 portfolio-container">
-              <img src="./assets/imgs/journalAppReact.png" alt="Journal App web site" />
+              <img
+                src="./assets/imgs/journalAppReact.png"
+                alt="Journal App web site"
+              />
               <a
                 class="show-more-btn"
                 href="https://journal-app-maig.netlify.app/"
